--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-material",
-  "version": "1.1.1-master-5b799e2",
+  "version": "1.1.2",
   "license": "MIT",
   "ignore": [],
   "dependencies": {
